// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BookCard /> Should render correctly 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
}

.c3 {
  margin: 0;
  font-size: 1rem;
}

.c0 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
  opacity: 0.6;
}

.c2 {
  grid-row: 1;
  grid-column: 2;
}

.c4 {
  grid-row: 2;
  grid-column: 2;
}

.c5 {
  grid-row: 3;
  grid-column: 2;
}

@media (min-width:32.25rem) {
  .c0 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2"
    >
      Book 1 🎉
    </h1>
    <span
      class="c3 c4"
    >
      By 
      Author 1
    </span>
    <span
      class="c3 c5"
    >
      Want to read
    </span>
  </div>
</div>
`;

exports[`<BookCard /> Should render correctly when deleted 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
}

.c3 {
  margin: 0;
  font-size: 1rem;
}

.c0 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
}

.c2 {
  grid-row: 1;
  grid-column: 2;
}

.c4 {
  grid-row: 2;
  grid-column: 2;
}

.c5 {
  color: orange;
  grid-row: 3;
  grid-column: 2;
}

@media (min-width:32.25rem) {
  .c0 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2"
    >
      Book 3 (DELETED)
    </h1>
    <span
      class="c3 c4"
    >
      By 
      Author 3
    </span>
    <span
      class="c3 c5"
      color="orange"
    >
      Reading now
    </span>
  </div>
</div>
`;

exports[`<BookCard /> Should render correctly with all parameters supplied 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
}

.c3 {
  margin: 0;
  font-size: 1rem;
}

.c0 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
}

.c2 {
  grid-row: 1;
  grid-column: 2;
}

.c4 {
  grid-row: 2;
  grid-column: 2;
}

.c5 {
  color: orange;
  grid-row: 3;
  grid-column: 2;
}

@media (min-width:32.25rem) {
  .c0 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2"
    >
      Book 2
    </h1>
    <span
      class="c3 c4"
    >
      By 
      Author 2
    </span>
    <span
      class="c3 c5"
      color="orange"
    >
      Reading now
    </span>
  </div>
</div>
`;

exports[`<BookCard /> Should render correctly with custom className 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
}

.c3 {
  margin: 0;
  font-size: 1rem;
}

.c0 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
  opacity: 0.6;
}

.c2 {
  grid-row: 1;
  grid-column: 2;
}

.c4 {
  grid-row: 2;
  grid-column: 2;
}

.c5 {
  grid-row: 3;
  grid-column: 2;
}

@media (min-width:32.25rem) {
  .c0 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

<div>
  <div
    class="c0 test-custom-classname"
  >
    <h1
      class="c1 c2"
    >
      Book 1 🎉
    </h1>
    <span
      class="c3 c4"
    >
      By 
      Author 1
    </span>
    <span
      class="c3 c5"
    >
      Want to read
    </span>
  </div>
</div>
`;

exports[`<BooksList /> Should render correctly 1`] = `
.c5 {
  margin: 0;
  font-size: 1.2rem;
}

.c1 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c7 {
  margin: 0;
  font-size: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
  opacity: 0.6;
}

.c10 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
}

.c6 {
  grid-row: 1;
  grid-column: 2;
}

.c8 {
  grid-row: 2;
  grid-column: 2;
}

.c9 {
  grid-row: 3;
  grid-column: 2;
}

.c11 {
  color: orange;
  grid-row: 3;
  grid-column: 2;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  margin: 2.13rem 0 0 0;
}

@media (min-width:32.25rem) {
  .c3 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c3 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c10 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

@media (min-width:50.25rem) {
  .c4 {
    margin-top: calc(1rem + 2rem);
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

<div>
  <div>
    <div
      class="c0"
    >
      <h1
        class="c1 c2"
        id="all-books"
      >
        All books
      </h1>
      <div>
        <div
          class="c3 c4"
          id="asdfg"
        >
          <h1
            class="c5 c6"
          >
            Book 1 🎉
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 1
          </span>
          <span
            class="c7 c9"
          >
            Want to read
          </span>
        </div>
      </div>
      <div>
        <div
          class="c10 c4"
          id="asdfh"
        >
          <h1
            class="c5 c6"
          >
            Book 2
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 2
          </span>
          <span
            class="c7 c11"
            color="orange"
          >
            Reading now
          </span>
        </div>
      </div>
      <div>
        <div
          class="c10 c4"
          id="asdfi"
        >
          <h1
            class="c5 c6"
          >
            Book 3 (DELETED)
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 3
          </span>
          <span
            class="c7 c11"
            color="orange"
          >
            Reading now
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BooksList /> Should render correctly with custom className 1`] = `
.c5 {
  margin: 0;
  font-size: 1.2rem;
}

.c1 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c7 {
  margin: 0;
  font-size: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
  opacity: 0.6;
}

.c10 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
}

.c6 {
  grid-row: 1;
  grid-column: 2;
}

.c8 {
  grid-row: 2;
  grid-column: 2;
}

.c9 {
  grid-row: 3;
  grid-column: 2;
}

.c11 {
  color: orange;
  grid-row: 3;
  grid-column: 2;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  box-sizing: border-box;
}

.c0 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  margin: 2.13rem 0 0 0;
}

@media (min-width:32.25rem) {
  .c3 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c3 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c10 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

@media (min-width:50.25rem) {
  .c4 {
    margin-top: calc(1rem + 2rem);
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

<div>
  <div
    class="test-custom-classname"
  >
    <div
      class="c0"
    >
      <h1
        class="c1 c2"
        id="all-books"
      >
        All books
      </h1>
      <div>
        <div
          class="c3 c4"
          id="asdfg"
        >
          <h1
            class="c5 c6"
          >
            Book 1 🎉
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 1
          </span>
          <span
            class="c7 c9"
          >
            Want to read
          </span>
        </div>
      </div>
      <div>
        <div
          class="c10 c4"
          id="asdfh"
        >
          <h1
            class="c5 c6"
          >
            Book 2
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 2
          </span>
          <span
            class="c7 c11"
            color="orange"
          >
            Reading now
          </span>
        </div>
      </div>
      <div>
        <div
          class="c10 c4"
          id="asdfi"
        >
          <h1
            class="c5 c6"
          >
            Book 3 (DELETED)
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 3
          </span>
          <span
            class="c7 c11"
            color="orange"
          >
            Reading now
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BooksList /> Should render correctly with deleteBook function 1`] = `
.c11 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #E02626;
  color: white;
  box-shadow: none;
}

.c11:focus-visible {
  outline: none !important;
}

.c11:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c11:focus,
.c11:hover {
  background-color: #BA2020;
  color: white;
  box-shadow: none;
}

.c11:active {
  background-color: #9F1717;
  color: white;
}

.c11:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c16 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #E02626;
  color: white;
  box-shadow: none;
  cursor: default;
}

.c16:focus-visible {
  outline: none !important;
}

.c16:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.75rem;
  pointer-events: none;
}

.c16:focus,
.c16:hover {
  background-color: #BA2020;
  color: white;
  box-shadow: none;
}

.c16:active {
  background-color: #9F1717;
  color: white;
}

.c16:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  margin: 0;
  font-size: 1.2rem;
}

.c1 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c7 {
  margin: 0;
  font-size: 1rem;
}

.c3 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
  opacity: 0.6;
}

.c14 {
  display: grid;
  grid-template-columns: 4rem 1fr;
  min-height: 4rem;
  gap: 0.375rem 1rem;
}

.c6 {
  grid-row: 1;
  grid-column: 2;
}

.c8 {
  grid-row: 2;
  grid-column: 2;
}

.c9 {
  grid-row: 3;
  grid-column: 2;
}

.c15 {
  color: orange;
  grid-row: 3;
  grid-column: 2;
}

.c4 {
  width: 100%;
  margin-top: 2rem;
  box-sizing: border-box;
  margin-bottom: 1rem;
}

.c12 {
  box-sizing: border-box;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 1rem;
  margin-bottom: 2rem;
}

.c0 {
  width: 100%;
  color: #1e1e1e;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  margin: 2.13rem 0 0 0;
}

@media (prefers-color-scheme:dark) {
  .c11:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c11 {
    background-color: #CA2020;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c11:focus,
  .c11:hover {
    background-color: #891111;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c11:active {
    background-color: #730D0D;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c11:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (prefers-color-scheme:dark) {
  .c16:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c16 {
    background-color: #CA2020;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c16:focus,
  .c16:hover {
    background-color: #891111;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c16:active {
    background-color: #730D0D;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c16:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

@media (min-width:32.25rem) {
  .c3 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c3 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

@media (min-width:32.25rem) {
  .c14 {
    grid-template-columns: 4rem 1fr 10rem;
    grid-template-rows: 3;
  }
}

@media (min-width:50.25rem) {
  .c14 {
    gap: calc(2 * 0.375rem) 1rem;
    grid-template-columns: 5rem 1fr 10rem;
  }
}

@media (min-width:50.25rem) {
  .c4 {
    margin-top: calc(1rem + 2rem);
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: #ffffff;
  }
}

<div>
  <div>
    <div
      class="c0"
    >
      <h1
        class="c1 c2"
        id="all-books"
      >
        All books
      </h1>
      <div>
        <div
          class="c3 c4"
          id="asdfg"
        >
          <h1
            class="c5 c6"
          >
            Book 1 🎉
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 1
          </span>
          <span
            class="c7 c9"
          >
            Want to read
          </span>
        </div>
        <div
          class="c10"
        >
          <button
            class="c11 c12"
            type="button"
          >
            <span
              class="c13"
            >
              Delete book
            </span>
          </button>
        </div>
      </div>
      <div>
        <div
          class="c14 c4"
          id="asdfh"
        >
          <h1
            class="c5 c6"
          >
            Book 2
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 2
          </span>
          <span
            class="c7 c15"
            color="orange"
          >
            Reading now
          </span>
        </div>
        <div
          class="c10"
        >
          <button
            class="c11 c12"
            type="button"
          >
            <span
              class="c13"
            >
              Delete book
            </span>
          </button>
        </div>
      </div>
      <div>
        <div
          class="c14 c4"
          id="asdfi"
        >
          <h1
            class="c5 c6"
          >
            Book 3 (DELETED)
          </h1>
          <span
            class="c7 c8"
          >
            By 
            Author 3
          </span>
          <span
            class="c7 c15"
            color="orange"
          >
            Reading now
          </span>
        </div>
        <div
          class="c10"
        >
          <button
            class="c16 c12"
            disabled=""
            type="button"
          >
            <span
              class="c13"
            >
              Delete book
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
